JBIDE-29058: update TP for 2023-09.GA (#348)
Signed-off-by: Stephane Bouchet <sbouchet@redhat.com>